manifests/istio/helloweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  namespace: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: gcr.io/jkwng-images/helloweb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 128MiB
          limits:
            cpu: 250m
            memory: 256MiB
