manifests/istio/helloweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: helloweb
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
