manifests/istio/helloweb-virtualservice-ext.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloweb-route-external
  namespace: helloweb
spec:
  # forward traffic in the mesh to the helloweb service
  hosts:
  - '*'
  gateways:
  - helloweb-gateway
  http:
  - name: helloweb
    route:
    - destination:
        host: helloweb.helloweb.svc.cluster.local
