manifests/istio/helloweb-virtualservice-int.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloweb-route-internal
  namespace: helloweb
spec:
  # forward traffic in the mesh to the helloweb service
  hosts:
  - helloweb.helloweb.svc.cluster.local
  gateways:
  - mesh
  http:
  - name: "helloweb"
    route:
    - destination:
        host: helloweb.helloweb.svc.cluster.local
